EDIT and game in case of victory

--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,17 @@
 body{
     background-color: gray;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-image: url('../img/camo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+    background-color: rgb(35, 75, 35);
+}    
 
 .container {
 	max-width: 700px;
 	margin: 0 auto;
 	padding: 50px;
-    text-shadow: 3px 3px #3c2424 !important;
+    text-shadow: 3px 5px #3c2424 !important;
 }
 
 .game-setting-section{
-    background-color: rgba(60, 60, 60, 0.6);
     border: 2px solid yellow;
     border-radius: 5px;
     padding-bottom: 20px;
@@ -39,7 +36,6 @@ body{
     width: 100%;
     align-self: center;
     text-shadow: 3px 3px #3c2424 !important;
-    colo
 }
 
 #grill {
@@ -56,6 +52,11 @@ body{
 	justify-content: center;
 	align-items: center;
 	font-size: 14px;
+}
+
+#point-section{
+    color: white;
+    font-size: 20px;
 }
 
 .btn-success{    
